--- a/BoldareApp/appsettings.Development.json
+++ b/BoldareApp/appsettings.Development.json
@@ -3,6 +3,37 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Serilog": {
+      "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+      "MinimumLevel": {
+        "Default": "Information",
+        "Override": {
+          "Microsoft": "Warning",
+          "System": "Warning"
+        }
+      },
+      "WriteTo": [
+        { "Name": "Console" },
+        {
+          "Name": "File",
+          "Args": {
+            "path": "logs/app.log",
+            "rollingInterval": "Day",
+            "retainedFileCountLimit": 7
+          }
+        }
+      ],
+      "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+      "Properties": {
+        "Application": "BoldareApp"
+      }
     }
+  },
+  "JwtSettings": {
+    "Key": "9A7F3D0E2C8B4A1F9D6E3B5C1A7D8F0E",
+    "Issuer": "BoldareApp",
+    "Audience": "BoldareAppClient",
+    "ExpiresMinutes": 60
   }
 }
