--- a/BoldareApp/appsettings.Development.json
+++ b/BoldareApp/appsettings.Development.json
@@ -2,15 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     },
     "Serilog": {
       "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
       "MinimumLevel": {
         "Default": "Information",
         "Override": {
-          "Microsoft": "Warning",
-          "System": "Warning"
+          "Microsoft": "Information",
+          "System": "Information"
         }
       },
       "WriteTo": [
@@ -35,5 +35,8 @@
     "Issuer": "BoldareApp",
     "Audience": "BoldareAppClient",
     "ExpiresMinutes": 60
+  },
+  "DatabaseCache": {
+    "ConnectionString": "Data Source=brewerycache.db"
   }
 }
